--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 <body>
     <h1>这是我的git文件</h1>
     <p>操作一</p>
+    <button click="myClick()">点我啊，傻逼</button>
 </body>
 </html>
+<script>
+    function myClick(){
+        alert('xxx')
+    }
+</script>
